Phase 3/parser.output
Nonterminals useless in grammar

   File
   ImportList
   Import
   ListofFunctions
   Function
   ArgList
   VoidableArgList
   ListOfCode
   Code
   Loop
   TernaryOp
   ForLoop
   WhileLoop
   Return
   Break
   VoidableSingleStatement
   Voidable
   Conditional
   Else_Block
   Elif_Piece
   Else_Piece


Terminals unused in grammar

   RETURN
   BREAK
   IMPORT
   IF
   ELIF
   ELSE
   FOR
   WHILE
   DEF
   SCOMMA
   OF
   CF
   QUEST
   COLON
   VOID


Rules useless in grammar

   48 File: ImportList ListOfStatem ListofFunctions
   49     | ListOfStatem ListofFunctions
   50     | ListofFunctions
   51     | ImportList ListofFunctions

   52 ImportList: Import
   53           | ImportList Import

   54 Import: IMPORT ID STOP

   55 ListofFunctions: Function
   56                | ListofFunctions Function

   57 Function: DEF ID OC VoidableArgList CC OF ListOfCode CF

   58 ArgList: Vartype ID
   59        | ArgList COMMA Vartype ID

   60 VoidableArgList: VOID
   61                | ArgList

   62 ListOfCode: Code
   63           | ListOfCode Code

   64 Code: ListOfStatem
   65     | Conditional
   66     | Loop
   67     | Return
   68     | Break
   69     | TernaryOp

   70 Loop: ForLoop
   71     | WhileLoop

   72 TernaryOp: Statement QUEST Statement COLON Statement STOP

   73 ForLoop: FOR OC Voidable SCOMMA Expression SCOMMA Voidable CC OF ListOfCode CF

   74 WhileLoop: WHILE OC VoidableSingleStatement CC OF ListOfCode CF

   75 Return: RETURN VOID STOP
   76       | RETURN ListOfExpr STOP

   77 Break: BREAK STOP

   78 VoidableSingleStatement: VOID
   79                        | Statement

   80 Voidable: VOID
   81         | ListOfStatem

   82 Conditional: IF OC Expression CC OF ListOfCode CF
   83            | IF OC Expression CC OF ListOfCode CF Else_Block

   84 Else_Block: Else_Piece
   85           | Elif_Piece
   86           | Elif_Piece Else_Block

   87 Elif_Piece: ELIF OC Expression CC OF ListOfCode CF

   88 Else_Piece: ELSE OF ListOfCode CF


Grammar

    0 $accept: FinalNode $end

    1 FinalNode: ListOfStatem

    2 ListOfStatem: ListOfStatem STOP Statement
    3             | Statement

    4 Statement: Expression
    5          | Location AsignOp Expression
    6          | Vartype ID AsignOp Expression
    7          | Initialization

    8 Initialization: Vartype ID
    9               | ARRAY Vartype ID OS Expression CS
   10               | ARRAY Vartype ID OS Expression COMMA Expression CS

   11 AsignOp: ASGN
   12        | PASGN
   13        | SASGN

   14 Expression: Location
   15           | Literal
   16           | Expression ADD Expression
   17           | Expression MULT Expression
   18           | Expression DIV Expression
   19           | Expression MOD Expression
   20           | Expression LEQ Expression
   21           | Expression GEQ Expression
   22           | Expression GT Expression
   23           | Expression EQ Expression
   24           | Expression LT Expression
   25           | Expression NEQ Expression
   26           | Expression AND Expression
   27           | Expression OR Expression
   28           | OC Expression CC
   29           | NOT Expression
   30           | SUB Expression
   31           | MethodCall

   32 Location: ID
   33         | ID OS Expression CS
   34         | ID OS Expression COMMA Expression CS

   35 Literal: INTL
   36        | TRUE
   37        | FALSE
   38        | CHAR
   39        | UINTL

   40 Vartype: TINT
   41        | TUINT
   42        | TBOOL
   43        | TCHAR

   44 MethodCall: ID OC CC
   45           | ID OC ListOfExpr CC

   46 ListOfExpr: Expression
   47           | ListOfExpr COMMA Expression


Terminals, with rules where they appear

$end (0) 0
error (256)
ARRAY (258) 9 10
RETURN (259)
BREAK (260)
IMPORT (261)
IF (262)
ELIF (263)
ELSE (264)
FOR (265)
WHILE (266)
DEF (267)
NOT (268) 29
SCOMMA (269)
COMMA (270) 10 34 47
OF (271)
CF (272)
OC (273) 28 44 45
CC (274) 28 44 45
OS (275) 9 10 33 34
CS (276) 9 10 33 34
QUEST (277)
COLON (278)
ADD (279) 16
DIV (280) 18
EQ (281) 23
GEQ (282) 21
GT (283) 22
LEQ (284) 20
LT (285) 24
MULT (286) 17
NEQ (287) 25
SUB (288) 30
AND (289) 26
OR (290) 27
MOD (291) 19
INTL (292) 35
UINTL (293) 39
CHAR (294) 38
TRUE (295) 36
FALSE (296) 37
ID (297) 6 8 9 10 32 33 34 44 45
VOID (298)
TINT (299) 40
TUINT (300) 41
TCHAR (301) 43
TBOOL (302) 42
STOP (303) 2
ASGN (304) 11
PASGN (305) 12
SASGN (306) 13
STATEMENT (307)
LOCID (308)
EXPRESSIONVSEXPRESSION (309)
EXPRESSIONVSLOCASGNEXP (310)
UMINUS (311)


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
FinalNode (58)
    on left: 1, on right: 0
ListOfStatem (59)
    on left: 2 3, on right: 1 2
Statement (60)
    on left: 4 5 6 7, on right: 2 3
Initialization (61)
    on left: 8 9 10, on right: 7
AsignOp (62)
    on left: 11 12 13, on right: 5 6
Expression (63)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31,
    on right: 4 5 6 9 10 16 17 18 19 20 21 22 23 24 25 26 27 28 29
    30 33 34 46 47
Location (64)
    on left: 32 33 34, on right: 5 14
Literal (65)
    on left: 35 36 37 38 39, on right: 15
Vartype (66)
    on left: 40 41 42 43, on right: 6 8 9 10
MethodCall (67)
    on left: 44 45, on right: 31
ListOfExpr (68)
    on left: 46 47, on right: 45 47


State 0

    0 $accept: . FinalNode $end

    ARRAY  shift, and go to state 1
    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10
    TINT   shift, and go to state 11
    TUINT  shift, and go to state 12
    TCHAR  shift, and go to state 13
    TBOOL  shift, and go to state 14

    FinalNode       go to state 15
    ListOfStatem    go to state 16
    Statement       go to state 17
    Initialization  go to state 18
    Expression      go to state 19
    Location        go to state 20
    Literal         go to state 21
    Vartype         go to state 22
    MethodCall      go to state 23


State 1

    9 Initialization: ARRAY . Vartype ID OS Expression CS
   10               | ARRAY . Vartype ID OS Expression COMMA Expression CS

    TINT   shift, and go to state 11
    TUINT  shift, and go to state 12
    TCHAR  shift, and go to state 13
    TBOOL  shift, and go to state 14

    Vartype  go to state 24


State 2

   29 Expression: NOT . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 25
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 3

   28 Expression: OC . Expression CC

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 27
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 4

   30 Expression: SUB . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 28
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 5

   35 Literal: INTL .

    $default  reduce using rule 35 (Literal)


State 6

   39 Literal: UINTL .

    $default  reduce using rule 39 (Literal)


State 7

   38 Literal: CHAR .

    $default  reduce using rule 38 (Literal)


State 8

   36 Literal: TRUE .

    $default  reduce using rule 36 (Literal)


State 9

   37 Literal: FALSE .

    $default  reduce using rule 37 (Literal)


State 10

   32 Location: ID .
   33         | ID . OS Expression CS
   34         | ID . OS Expression COMMA Expression CS
   44 MethodCall: ID . OC CC
   45           | ID . OC ListOfExpr CC

    OC  shift, and go to state 29
    OS  shift, and go to state 30

    $default  reduce using rule 32 (Location)


State 11

   40 Vartype: TINT .

    $default  reduce using rule 40 (Vartype)


State 12

   41 Vartype: TUINT .

    $default  reduce using rule 41 (Vartype)


State 13

   43 Vartype: TCHAR .

    $default  reduce using rule 43 (Vartype)


State 14

   42 Vartype: TBOOL .

    $default  reduce using rule 42 (Vartype)


State 15

    0 $accept: FinalNode . $end

    $end  shift, and go to state 31


State 16

    1 FinalNode: ListOfStatem .
    2 ListOfStatem: ListOfStatem . STOP Statement

    STOP  shift, and go to state 32

    $default  reduce using rule 1 (FinalNode)


State 17

    3 ListOfStatem: Statement .

    $default  reduce using rule 3 (ListOfStatem)


State 18

    7 Statement: Initialization .

    $default  reduce using rule 7 (Statement)


State 19

    4 Statement: Expression .
   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression

    ADD   shift, and go to state 33
    DIV   shift, and go to state 34
    EQ    shift, and go to state 35
    GEQ   shift, and go to state 36
    GT    shift, and go to state 37
    LEQ   shift, and go to state 38
    LT    shift, and go to state 39
    MULT  shift, and go to state 40
    NEQ   shift, and go to state 41
    AND   shift, and go to state 42
    OR    shift, and go to state 43
    MOD   shift, and go to state 44

    $default  reduce using rule 4 (Statement)


State 20

    5 Statement: Location . AsignOp Expression
   14 Expression: Location .

    ASGN   shift, and go to state 45
    PASGN  shift, and go to state 46
    SASGN  shift, and go to state 47

    $default  reduce using rule 14 (Expression)

    AsignOp  go to state 48


State 21

   15 Expression: Literal .

    $default  reduce using rule 15 (Expression)


State 22

    6 Statement: Vartype . ID AsignOp Expression
    8 Initialization: Vartype . ID

    ID  shift, and go to state 49


State 23

   31 Expression: MethodCall .

    $default  reduce using rule 31 (Expression)


State 24

    9 Initialization: ARRAY Vartype . ID OS Expression CS
   10               | ARRAY Vartype . ID OS Expression COMMA Expression CS

    ID  shift, and go to state 50


State 25

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression
   29           | NOT Expression .

    $default  reduce using rule 29 (Expression)


State 26

   14 Expression: Location .

    $default  reduce using rule 14 (Expression)


State 27

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression
   28           | OC Expression . CC

    CC    shift, and go to state 51
    ADD   shift, and go to state 33
    DIV   shift, and go to state 34
    EQ    shift, and go to state 35
    GEQ   shift, and go to state 36
    GT    shift, and go to state 37
    LEQ   shift, and go to state 38
    LT    shift, and go to state 39
    MULT  shift, and go to state 40
    NEQ   shift, and go to state 41
    AND   shift, and go to state 42
    OR    shift, and go to state 43
    MOD   shift, and go to state 44


State 28

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression
   30           | SUB Expression .

    $default  reduce using rule 30 (Expression)


State 29

   44 MethodCall: ID OC . CC
   45           | ID OC . ListOfExpr CC

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    CC     shift, and go to state 52
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 53
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23
    ListOfExpr  go to state 54


State 30

   33 Location: ID OS . Expression CS
   34         | ID OS . Expression COMMA Expression CS

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 55
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 31

    0 $accept: FinalNode $end .

    $default  accept


State 32

    2 ListOfStatem: ListOfStatem STOP . Statement

    ARRAY  shift, and go to state 1
    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10
    TINT   shift, and go to state 11
    TUINT  shift, and go to state 12
    TCHAR  shift, and go to state 13
    TBOOL  shift, and go to state 14

    Statement       go to state 56
    Initialization  go to state 18
    Expression      go to state 19
    Location        go to state 20
    Literal         go to state 21
    Vartype         go to state 22
    MethodCall      go to state 23


State 33

   16 Expression: Expression ADD . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 57
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 34

   18 Expression: Expression DIV . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 58
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 35

   23 Expression: Expression EQ . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 59
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 36

   21 Expression: Expression GEQ . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 60
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 37

   22 Expression: Expression GT . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 61
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 38

   20 Expression: Expression LEQ . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 62
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 39

   24 Expression: Expression LT . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 63
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 40

   17 Expression: Expression MULT . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 64
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 41

   25 Expression: Expression NEQ . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 65
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 42

   26 Expression: Expression AND . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 66
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 43

   27 Expression: Expression OR . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 67
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 44

   19 Expression: Expression MOD . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 68
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 45

   11 AsignOp: ASGN .

    $default  reduce using rule 11 (AsignOp)


State 46

   12 AsignOp: PASGN .

    $default  reduce using rule 12 (AsignOp)


State 47

   13 AsignOp: SASGN .

    $default  reduce using rule 13 (AsignOp)


State 48

    5 Statement: Location AsignOp . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 69
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 49

    6 Statement: Vartype ID . AsignOp Expression
    8 Initialization: Vartype ID .

    ASGN   shift, and go to state 45
    PASGN  shift, and go to state 46
    SASGN  shift, and go to state 47

    $default  reduce using rule 8 (Initialization)

    AsignOp  go to state 70


State 50

    9 Initialization: ARRAY Vartype ID . OS Expression CS
   10               | ARRAY Vartype ID . OS Expression COMMA Expression CS

    OS  shift, and go to state 71


State 51

   28 Expression: OC Expression CC .

    $default  reduce using rule 28 (Expression)


State 52

   44 MethodCall: ID OC CC .

    $default  reduce using rule 44 (MethodCall)


State 53

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression
   46 ListOfExpr: Expression .

    ADD   shift, and go to state 33
    DIV   shift, and go to state 34
    EQ    shift, and go to state 35
    GEQ   shift, and go to state 36
    GT    shift, and go to state 37
    LEQ   shift, and go to state 38
    LT    shift, and go to state 39
    MULT  shift, and go to state 40
    NEQ   shift, and go to state 41
    AND   shift, and go to state 42
    OR    shift, and go to state 43
    MOD   shift, and go to state 44

    $default  reduce using rule 46 (ListOfExpr)


State 54

   45 MethodCall: ID OC ListOfExpr . CC
   47 ListOfExpr: ListOfExpr . COMMA Expression

    COMMA  shift, and go to state 72
    CC     shift, and go to state 73


State 55

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression
   33 Location: ID OS Expression . CS
   34         | ID OS Expression . COMMA Expression CS

    COMMA  shift, and go to state 74
    CS     shift, and go to state 75
    ADD    shift, and go to state 33
    DIV    shift, and go to state 34
    EQ     shift, and go to state 35
    GEQ    shift, and go to state 36
    GT     shift, and go to state 37
    LEQ    shift, and go to state 38
    LT     shift, and go to state 39
    MULT   shift, and go to state 40
    NEQ    shift, and go to state 41
    AND    shift, and go to state 42
    OR     shift, and go to state 43
    MOD    shift, and go to state 44


State 56

    2 ListOfStatem: ListOfStatem STOP Statement .

    $default  reduce using rule 2 (ListOfStatem)


State 57

   16 Expression: Expression . ADD Expression
   16           | Expression ADD Expression .
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression

    DIV   shift, and go to state 34
    EQ    shift, and go to state 35
    GEQ   shift, and go to state 36
    GT    shift, and go to state 37
    LEQ   shift, and go to state 38
    LT    shift, and go to state 39
    MULT  shift, and go to state 40
    NEQ   shift, and go to state 41
    AND   shift, and go to state 42
    OR    shift, and go to state 43
    MOD   shift, and go to state 44

    $default  reduce using rule 16 (Expression)


State 58

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   18           | Expression DIV Expression .
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression

    EQ   shift, and go to state 35
    GEQ  shift, and go to state 36
    GT   shift, and go to state 37
    LEQ  shift, and go to state 38
    LT   shift, and go to state 39
    NEQ  shift, and go to state 41
    AND  shift, and go to state 42
    OR   shift, and go to state 43

    $default  reduce using rule 18 (Expression)


State 59

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   23           | Expression EQ Expression .
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression

    AND  shift, and go to state 42
    OR   shift, and go to state 43

    $default  reduce using rule 23 (Expression)


State 60

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   21           | Expression GEQ Expression .
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression

    AND  shift, and go to state 42
    OR   shift, and go to state 43

    $default  reduce using rule 21 (Expression)


State 61

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   22           | Expression GT Expression .
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression

    AND  shift, and go to state 42
    OR   shift, and go to state 43

    $default  reduce using rule 22 (Expression)


State 62

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   20           | Expression LEQ Expression .
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression

    AND  shift, and go to state 42
    OR   shift, and go to state 43

    $default  reduce using rule 20 (Expression)


State 63

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   24           | Expression LT Expression .
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression

    AND  shift, and go to state 42
    OR   shift, and go to state 43

    $default  reduce using rule 24 (Expression)


State 64

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   17           | Expression MULT Expression .
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression

    EQ   shift, and go to state 35
    GEQ  shift, and go to state 36
    GT   shift, and go to state 37
    LEQ  shift, and go to state 38
    LT   shift, and go to state 39
    NEQ  shift, and go to state 41
    AND  shift, and go to state 42
    OR   shift, and go to state 43

    $default  reduce using rule 17 (Expression)


State 65

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   25           | Expression NEQ Expression .
   26           | Expression . AND Expression
   27           | Expression . OR Expression

    AND  shift, and go to state 42
    OR   shift, and go to state 43

    $default  reduce using rule 25 (Expression)


State 66

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   26           | Expression AND Expression .
   27           | Expression . OR Expression

    $default  reduce using rule 26 (Expression)


State 67

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression
   27           | Expression OR Expression .

    $default  reduce using rule 27 (Expression)


State 68

   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   19           | Expression MOD Expression .
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression

    EQ   shift, and go to state 35
    GEQ  shift, and go to state 36
    GT   shift, and go to state 37
    LEQ  shift, and go to state 38
    LT   shift, and go to state 39
    NEQ  shift, and go to state 41
    AND  shift, and go to state 42
    OR   shift, and go to state 43

    $default  reduce using rule 19 (Expression)


State 69

    5 Statement: Location AsignOp Expression .
   16 Expression: Expression . ADD Expression
   17           | Expression . MULT Expression
   18           | Expression . DIV Expression
   19           | Expression . MOD Expression
   20           | Expression . LEQ Expression
   21           | Expression . GEQ Expression
   22           | Expression . GT Expression
   23           | Expression . EQ Expression
   24           | Expression . LT Expression
   25           | Expression . NEQ Expression
   26           | Expression . AND Expression
   27           | Expression . OR Expression

    ADD   shift, and go to state 33
    DIV   shift, and go to state 34
    EQ    shift, and go to state 35
    GEQ   shift, and go to state 36
    GT    shift, and go to state 37
    LEQ   shift, and go to state 38
    LT    shift, and go to state 39
    MULT  shift, and go to state 40
    NEQ   shift, and go to state 41
    AND   shift, and go to state 42
    OR    shift, and go to state 43
    MOD   shift, and go to state 44

    $default  reduce using rule 5 (Statement)


State 70

    6 Statement: Vartype ID AsignOp . Expression

    NOT    shift, and go to state 2
    OC     shift, and go to state 3
    SUB    shift, and go to state 4
    INTL   shift, and go to state 5
    UINTL  shift, and go to state 6
    CHAR   shift, and go to state 7
    TRUE   shift, and go to state 8
    FALSE  shift, and go to state 9
    ID     shift, and go to state 10

    Expression  go to state 76
    Location    go to state 26
    Literal     go to state 21
    MethodCall  go to state 23


State 71
